# test-gha-cookiecutter

./: .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: ci.yml  pypi.yml  sonarcloud.yml
app/: CMakeLists.txt  citest_app.cpp  test-gha-cookiecutter_app.cpp
cmake/: test-gha-cookiecutterConfig.cmake.in
doc/: CMakeLists.txt  conf.py  index.rst
include/citest/: citest.hpp
python/citest/: __init__.py  _citest.cpp
python/testghacookiecutter/: __init__.py  _test-gha-cookiecutter.cpp
tests/: CMakeLists.txt  citest_t.cpp  test-gha-cookiecutter_t.cpp
tests/python/: test_python_bindings.py
